--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     iframe {
       width: 100%;
-      height: 500px;
+      height: 300px;
       border: none;
       background: #111;
       display: block;
@@ -625,24 +625,24 @@
 
   <!-- Channel Selection Buttons -->
   <div class="channel-selector">
-    <button class="channel-btn active" onclick="changeChannel('https://tataplays.site/sonyliv.html?id=300255', this)">
-      Sony LIV
+    <button class="channel-btn active" onclick="changeChannel('https://starry7c.github.io/India-england-willow/', this)">
+      willow
     </button>
-    <button class="channel-btn" onclick="changeChannel('https://tataplays.site/hotstar.html?id=sports1', this)">
-      Hotstar Sports
+    <button class="channel-btn" onclick="changeChannel('https://cricindialivee.blogspot.com/p/tnt-1.html', this)">
+      TNT1
     </button>
-    <button class="channel-btn" onclick="changeChannel('https://tataplays.site/zee5.html?id=cricket', this)">
-      ZEE5 Cricket
+    <button class="channel-btn" onclick="changeChannel('https://crxcs.blogspot.com/p/tnt2.html', this)">
+      TNT2
     </button>
     <button class="channel-btn" onclick="changeChannel('https://tataplays.site/voot.html?id=live1', this)">
-      Voot Live
+    TNT3
     </button>
   </div>
 
   <!-- Telegram Button - Moved to middle -->
   <div class="telegram-section">
     <button class="telegram-btn" onclick="showPopup()">
-      📱 Join Telegram Channel
+      Join Telegram Channel
     </button>
   </div>
 
@@ -652,7 +652,7 @@
       <span>Live Chat</span>
       <button class="chat-toggle" onclick="toggleLiveChat()" id="chatToggle">
         <div class="toggle-icon" id="toggleIcon"></div>
-        <span id="toggleText">ON</span>
+        <span id="toggleText">off</span>
       </button>
       <div class="online-count">
         <div class="online-dot"></div>
