--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
       }
       
       iframe {
-        height: 350px;
+        height: 450px;
         border-radius: 12px;
       }
       
@@ -625,17 +625,14 @@
 
   <!-- Channel Selection Buttons -->
   <div class="channel-selector">
-    <button class="channel-btn active" onclick="changeChannel('https://starry7c.github.io/India-england-willow/', this)">
+    <button class="channel-btn active" onclick="changeChannel('https://tinyurl.com/Willow-HD-Live', this)">
       willow
     </button>
-    <button class="channel-btn" onclick="changeChannel('https://cricindialivee.blogspot.com/p/tnt-1.html', this)">
-      TNT1
+    <button class="channel-btn" onclick="changeChannel('https://starry7c.github.io/Sony-sport-eng/', this)">
+      sony ten 5
     </button>
-    <button class="channel-btn" onclick="changeChannel('https://crxcs.blogspot.com/p/tnt2.html', this)">
-      TNT2
-    </button>
-    <button class="channel-btn" onclick="changeChannel('https://tataplays.site/voot.html?id=live1', this)">
-    TNT3
+    <button class="channel-btn" onclick="changeChannel('https://starry7c.github.io/Sony-hindi/', this)">
+      TEN 3
     </button>
   </div>
 
