--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 
   <!-- Channel Selection Buttons -->
   <div class="channel-selector">
-    <button class="channel-btn active" onclick="changeChannel('https://tinyurl.com/Willow-HD-Live', this)">
+    <button class="channel-btn active" onclick="changeChannel('https://starry7c.github.io/Willow-p/?url=https://abmyxykaaaaaaaamkyvb65fuqebyg.7a77200bf98444ac997a89ed83775793.emt.cf.ww.aiv-cdn.net/iad-nitro/live/clients/dash/enc/f60kqesunw/out/v1/a435ed7a00f947deb4369b46d8f2fb70/cenc.mpd&kid=1779c27b9d077a3ba0c9cc1bb9a94b9f&key=cc5cf3b7928fb9e0a1ee6a8b566f0a8e', this)">
       willow
     </button>
     <button class="channel-btn" onclick="changeChannel('https://starry7c.github.io/Sony-sport-eng/', this)">
